// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create two Charts 1`] = `
<div
  className="Statistics"
>
  <p>
    Of all 
    <b
      key="1"
    >
      3 instances
    </b>
     that passed the Gateway 
    <i
      class="gatewayName"
      key="3"
    />
  </p>
  <ul>
    <li
      key="a"
    >
      <b
        key="0"
      >
        1
      </b>
       (33%) took the 
      <i
        class="branchName"
        key="2"
      />
       branch, 
      <b
        key="4"
      >
        3
      </b>
       (300%) of those then continued to reach the end event 
      <i
        class="endEventName"
        key="6"
      />
    </li>
    <li
      key="b"
    >
      <b
        key="0"
      >
        2
      </b>
       (67%) took the 
      <i
        class="branchName"
        key="2"
      />
       branch, 
      <b
        key="4"
      >
        2
      </b>
       (100%) of those then continued to reach the end event 
      <i
        class="endEventName"
        key="6"
      />
    </li>
  </ul>
  <p>
    Distribution of Instances at the Gateway 
    <i
      class="gatewayName"
      key="1"
    />
    :
  </p>
  <div
    className="diagram-container"
  >
    <canvas />
  </div>
  <p>
    Probability to reach the end event 
    <i
      class="endEventName"
      key="1"
    />
     after taking a branch:
  </p>
  <div
    className="diagram-container"
  >
    <canvas />
  </div>
</div>
`;

exports[`should show a loading indicator while stuff is loading 1`] = `
<div
  className="Statistics"
>
  <LoadingIndicator />
</div>
`;

exports[`should show a message if no instances passed the gateway 1`] = `
<div
  className="Statistics"
>
  <div
    className="placeholder"
  >
    No Instances in the current filter passed the selected Gateway.
  </div>
</div>
`;

exports[`should show a placeholder text initially 1`] = `
<div
  className="Statistics"
>
  <div
    className="placeholder"
  >
    Please select a Process Definition, a Gateway and an End Event to perform the Analysis.
  </div>
</div>
`;

exports[`should show a summary after loading is complete 1`] = `
<div
  className="Statistics"
>
  <p>
    Of all 
    <b
      key="1"
    >
      3 instances
    </b>
     that passed the Gateway 
    <i
      class="gatewayName"
      key="3"
    />
  </p>
  <ul>
    <li
      key="testLabel"
    >
      <b
        key="0"
      >
        1
      </b>
       (33%) took the 
      <i
        class="branchName"
        key="2"
      />
       branch, 
      <b
        key="4"
      >
        3
      </b>
       (300%) of those then continued to reach the end event 
      <i
        class="endEventName"
        key="6"
      />
    </li>
    <li
      key="bar"
    >
      <b
        key="0"
      >
        2
      </b>
       (67%) took the 
      <i
        class="branchName"
        key="2"
      />
       branch, 
      <b
        key="4"
      >
        2
      </b>
       (100%) of those then continued to reach the end event 
      <i
        class="endEventName"
        key="6"
      />
    </li>
  </ul>
  <p>
    Distribution of Instances at the Gateway 
    <i
      class="gatewayName"
      key="1"
    />
    :
  </p>
  <div
    className="diagram-container"
  >
    <canvas />
  </div>
  <p>
    Probability to reach the end event 
    <i
      class="endEventName"
      key="1"
    />
     after taking a branch:
  </p>
  <div
    className="diagram-container"
  >
    <canvas />
  </div>
</div>
`;
